# ptyolox-garage

./: NOTICE  README.md  README_JP.md  config.example.ini  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md
docs/en/: configuration.md  development.md  gui.md  index.md  installation.md  quickstart.md
docs/en/api/: config.md  dataset.md  trainer.md  wrapper.md
docs/jp/: configuration.md  development.md  gui.md  index.md  installation.md  quickstart.md
docs/jp/api/: config.md  dataset.md  trainer.md  wrapper.md
src/: ptyolox_garage_bootstrap.py
src/ptyolox_garage/: __init__.py  _trainer.py  config.py  dataset.py  i18n.py  wrapper.py
src/ptyolox_garage/gui/: app.py  camera_tab.py  export_tab.py  infer_tab.py  model_security.py  train_tab.py
src/yolox_wrapper/: __init__.py  _trainer.py  config.py  dataset.py  wrapper.py
src/yolox_wrapper/gui/: app.py  camera_tab.py  export_tab.py  infer_tab.py  train_tab.py
tests/: test_config.py  test_dataset.py  test_gui_state.py  test_i18n.py  test_model_security.py  test_wrapper.py
