[project]
name = "ptyolox-garage"
version = "0.1.0"
description = "A practical GUI and Python toolkit for Pixeltable YOLOX"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Moge800" },
]
keywords = ["yolox", "object-detection", "pytorch", "computer-vision", "tkinter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "beep-lite>=0.1.3",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pixeltable-yolox>=0.4.2",
    "onnx>=1.16",
    "ml-dtypes>=0.5.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/Moge800/ptyolox-garage"
Repository = "https://github.com/Moge800/ptyolox-garage"
Documentation = "https://github.com/Moge800/ptyolox-garage/tree/main/docs"
Issues = "https://github.com/Moge800/ptyolox-garage/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.0a1",
    "types-PyYAML>=6.0",
]

[project.scripts]
ptyolox-garage = "ptyolox_garage.gui.app:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptyolox_garage"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
